frontend-static-demo/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-static-demo-deploy
  labels:
    app.kubernetes.io/name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
    spec:
      containers:
        - name: frontend
          image: solo-seven/frontend-demo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
